<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/myLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/topMapContainer"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button_white"
        android:elevation="20dp"
        android:minHeight="40dp"
        android:minWidth="40dp"
        android:padding="5dp"
        app:srcCompat="@drawable/ic_my_location_24dp" />

    <LinearLayout
        android:id="@+id/topMapContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/campusSwitchBtnContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:foregroundGravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/SGWBtn"
                style="SwitchCampusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="SGW">

            </Button>

            <Button
                android:id="@+id/loyolaBtn"
                style="SwitchCampusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Loyola">
            </Button>

        </LinearLayout>

    </LinearLayout>

    <GridView
        android:id="@+id/FloorPickerGv"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/mapView"
        android:layout_centerVertical="true"
        android:stretchMode="none"
        android:layout_marginRight="10dp"
        android:numColumns="1"
        android:verticalSpacing="0dp" />
</RelativeLayout>