...
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_location">My location: </string>
    <string name="my_current_location">My Current Location</string>
    <string name="no_shuttle">No shuttles available at this time</string>
    <string name="no_routes">No routes available, please change the filter criteria.</string>
    <string name="departments">Departments</string>
    <string name="services">Services</string>
    <string name="indoor_map">Indoor Map</string>
    <string name="directions">Directions</string>
    <string name="no_classes_today">No classes today</string>
    <string name="sgw">SGW</string>
    <string name="loyola">Loyola</string>
    <string name="show_on_map">Show on Map</string>
...
